[Fix] -> Submenu shift to left if class 'ast-left-align-sub-menu' is added to the parent menu for submenu left alignment.

--- a/assets/css/unminified/style.css
+++ b/assets/css/unminified/style.css
@@ -2517,6 +2517,12 @@ body {
   left: 0;
 }
 
+.main-header-menu li.ast-left-align-sub-menu:hover > ul,
+.main-header-menu li.ast-left-align-sub-menu.focus > ul {
+  right: 0;
+  left: auto;
+}
+
 @media (min-width: 769px) {
   .main-header-menu li.ast-sub-menu-goes-outside:hover > ul,
   .main-header-menu li.ast-sub-menu-goes-outside.focus > ul {
